most viewed posts and latest posts, fixed single page service

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /*
-Theme Name: wpng2_test!!!
-Author: Stuart Kuentzel
-Author URI: http://doppiaeast.com
+Theme Name: Paintball theme
+Author: Korkishko Yurii
+Author URI: http://pb4life.in.ua
+Version: 0.0.2
 */
