--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -15,7 +15,7 @@
                     </div>
                 </div>
                 <carousel [interval]="myInterval" [noWrap]="noWrapSlides" [noPause]="noPause" [(activeSlide)]="activeSlideIndex">
-                    <slide *ngFor="let post of mostViewedPosts; let index=index">
+                    <slide *ngFor="let post of posts; let index=index">
                         <img class="single" [routerLink]="post.slug" [src]="post.thumbnail" style="margin:auto;">
 
                         <div class="carousel-caption">
@@ -43,85 +43,85 @@
             </div>
         </div>
     </div>
-    <div class="content_middle">
-        <div class="col-lg-3 col-md-3 col-sm-3">
-            <div class="content_middle_leftbar">
-                <div class="single_category wow fadeInDown">
-                    <h2><span class="bold_line"><span></span></span> <span class="solid_line"></span> <a href="#"
-                                                                                                         class="title_text">category1</a>
-                    </h2>
-                    <ul class="catg1_nav">
-                        <li>
-                            <div class="catgimg_container"><a href="pages/single.html" class="catg1_img"><img alt=""
-                                                                                                              src="assets/images/292x150x1.jpg"></a>
-                            </div>
-                            <h3 class="post_titile"><a href="pages/single.html">Vestibulum ut est augue, in varius</a>
-                            </h3>
-                        </li>
-                        <li>
-                            <div class="catgimg_container"><a href="pages/single.html" class="catg1_img"><img alt=""
-                                                                                                              src="assets/images/292x150x2.jpg"></a>
-                            </div>
-                            <h3 class="post_titile"><a href="pages/single.html">Vestibulum ut est augue, in varius</a>
-                            </h3>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-6">
-            <div class="content_middle_middle">
-                <div class="slick_slider2">
-                    <div class="single_featured_slide"><a href="pages/single.html"><img
-                            src="assets/images/567x330x1.jpg" alt=""></a>
-                        <h2><a href="pages/single.html">Praesent vitae quam vitae arcu posuer 1</a></h2>
-                        <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla
-                            nisl quis mauris. Suspendisse a pharetra urna. Morbi dui lectus, pharetra nec elementum
-                            eget, vulput...</p>
-                    </div>
-                    <div class="single_featured_slide"><a href="pages/single.html"><img
-                            src="assets/images/567x330x2.jpg" alt=""></a>
-                        <h2><a href="#">Praesent vitae quam vitae arcu posuer 2</a></h2>
-                        <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla
-                            nisl quis mauris. Suspendisse a pharetra urna. Morbi dui lectus, pharetra nec elementum
-                            eget, vulput...</p>
-                    </div>
-                    <div class="single_featured_slide"><a href="pages/single.html"><img
-                            src="assets/images/567x330x3.jpg" alt=""></a>
-                        <h2><a href="#">Praesent vitae quam vitae arcu posuer 3</a></h2>
-                        <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla
-                            nisl quis mauris. Suspendisse a pharetra urna. Morbi dui lectus, pharetra nec elementum
-                            eget, vulput...</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-3 col-md-3 col-sm-3">
-            <div class="content_middle_rightbar">
-                <div class="single_category wow fadeInDown">
-                    <h2><span class="bold_line"><span></span></span> <span class="solid_line"></span> <a href="#"
-                                                                                                         class="title_text">category2</a>
-                    </h2>
-                    <ul class="catg1_nav">
-                        <li>
-                            <div class="catgimg_container"><a href="pages/single.html" class="catg1_img"><img alt=""
-                                                                                                              src="assets/images/292x150x1.jpg"></a>
-                            </div>
-                            <h3 class="post_titile"><a href="pages/single.html">Vestibulum ut est augue, in varius</a>
-                            </h3>
-                        </li>
-                        <li>
-                            <div class="catgimg_container"><a href="pages/single.html" class="catg1_img"><img alt=""
-                                                                                                              src="assets/images/292x150x2.jpg"></a>
-                            </div>
-                            <h3 class="post_titile"><a href="pages/single.html">Vestibulum ut est augue, in varius</a>
-                            </h3>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
+    <!--<div class="content_middle">-->
+        <!--<div class="col-lg-3 col-md-3 col-sm-3">-->
+            <!--<div class="content_middle_leftbar">-->
+                <!--<div class="single_category wow fadeInDown">-->
+                    <!--<h2><span class="bold_line"><span></span></span> <span class="solid_line"></span> <a href="#"-->
+                                                                                                         <!--class="title_text">category1</a>-->
+                    <!--</h2>-->
+                    <!--<ul class="catg1_nav">-->
+                        <!--<li>-->
+                            <!--<div class="catgimg_container"><a href="pages/single.html" class="catg1_img"><img alt=""-->
+                                                                                                              <!--src="assets/images/292x150x1.jpg"></a>-->
+                            <!--</div>-->
+                            <!--<h3 class="post_titile"><a href="pages/single.html">Vestibulum ut est augue, in varius</a>-->
+                            <!--</h3>-->
+                        <!--</li>-->
+                        <!--<li>-->
+                            <!--<div class="catgimg_container"><a href="pages/single.html" class="catg1_img"><img alt=""-->
+                                                                                                              <!--src="assets/images/292x150x2.jpg"></a>-->
+                            <!--</div>-->
+                            <!--<h3 class="post_titile"><a href="pages/single.html">Vestibulum ut est augue, in varius</a>-->
+                            <!--</h3>-->
+                        <!--</li>-->
+                    <!--</ul>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="col-lg-6 col-md-6 col-sm-6">-->
+            <!--<div class="content_middle_middle">-->
+                <!--<div class="slick_slider2">-->
+                    <!--<div class="single_featured_slide"><a href="pages/single.html"><img-->
+                            <!--src="assets/images/567x330x1.jpg" alt=""></a>-->
+                        <!--<h2><a href="pages/single.html">Praesent vitae quam vitae arcu posuer 1</a></h2>-->
+                        <!--<p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla-->
+                            <!--nisl quis mauris. Suspendisse a pharetra urna. Morbi dui lectus, pharetra nec elementum-->
+                            <!--eget, vulput...</p>-->
+                    <!--</div>-->
+                    <!--<div class="single_featured_slide"><a href="pages/single.html"><img-->
+                            <!--src="assets/images/567x330x2.jpg" alt=""></a>-->
+                        <!--<h2><a href="#">Praesent vitae quam vitae arcu posuer 2</a></h2>-->
+                        <!--<p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla-->
+                            <!--nisl quis mauris. Suspendisse a pharetra urna. Morbi dui lectus, pharetra nec elementum-->
+                            <!--eget, vulput...</p>-->
+                    <!--</div>-->
+                    <!--<div class="single_featured_slide"><a href="pages/single.html"><img-->
+                            <!--src="assets/images/567x330x3.jpg" alt=""></a>-->
+                        <!--<h2><a href="#">Praesent vitae quam vitae arcu posuer 3</a></h2>-->
+                        <!--<p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla-->
+                            <!--nisl quis mauris. Suspendisse a pharetra urna. Morbi dui lectus, pharetra nec elementum-->
+                            <!--eget, vulput...</p>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="col-lg-3 col-md-3 col-sm-3">-->
+            <!--<div class="content_middle_rightbar">-->
+                <!--<div class="single_category wow fadeInDown">-->
+                    <!--<h2><span class="bold_line"><span></span></span> <span class="solid_line"></span> <a href="#"-->
+                                                                                                         <!--class="title_text">category2</a>-->
+                    <!--</h2>-->
+                    <!--<ul class="catg1_nav">-->
+                        <!--<li>-->
+                            <!--<div class="catgimg_container"><a href="pages/single.html" class="catg1_img"><img alt=""-->
+                                                                                                              <!--src="assets/images/292x150x1.jpg"></a>-->
+                            <!--</div>-->
+                            <!--<h3 class="post_titile"><a href="pages/single.html">Vestibulum ut est augue, in varius</a>-->
+                            <!--</h3>-->
+                        <!--</li>-->
+                        <!--<li>-->
+                            <!--<div class="catgimg_container"><a href="pages/single.html" class="catg1_img"><img alt=""-->
+                                                                                                              <!--src="assets/images/292x150x2.jpg"></a>-->
+                            <!--</div>-->
+                            <!--<h3 class="post_titile"><a href="pages/single.html">Vestibulum ut est augue, in varius</a>-->
+                            <!--</h3>-->
+                        <!--</li>-->
+                    <!--</ul>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
     <div class="content_bottom">
         <div class="col-lg-8 col-md-8">
             <div class="content_bottom_left">
@@ -337,47 +337,47 @@
         </div>
         <div class="col-lg-4 col-md-4">
             <div class="content_bottom_right">
-                <div class="single_bottom_rightbar">
-                    <h2>Recent Post</h2>
-                    <ul class="small_catg popular_catg wow fadeInDown">
-                        <li>
-                            <div class="media wow fadeInDown"><a href="#" class="media-left"><img alt=""
-                                                                                                  src="assets/images/112x112.jpg">
-                            </a>
-                                <div class="media-body">
-                                    <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a>
-                                    </h4>
-                                    <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas
-                                        imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="media wow fadeInDown"><a href="#" class="media-left"><img alt=""
-                                                                                                  src="assets/images/112x112.jpg">
-                            </a>
-                                <div class="media-body">
-                                    <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a>
-                                    </h4>
-                                    <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas
-                                        imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="media wow fadeInDown"><a href="#" class="media-left"><img alt=""
-                                                                                                  src="assets/images/112x112.jpg">
-                            </a>
-                                <div class="media-body">
-                                    <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a>
-                                    </h4>
-                                    <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas
-                                        imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
+                <!--<div class="single_bottom_rightbar">-->
+                    <!--<h2>Recent Post</h2>-->
+                    <!--<ul class="small_catg popular_catg wow fadeInDown">-->
+                        <!--<li>-->
+                            <!--<div class="media wow fadeInDown"><a href="#" class="media-left"><img alt=""-->
+                                                                                                  <!--src="assets/images/112x112.jpg">-->
+                            <!--</a>-->
+                                <!--<div class="media-body">-->
+                                    <!--<h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a>-->
+                                    <!--</h4>-->
+                                    <!--<p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas-->
+                                        <!--imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>-->
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</li>-->
+                        <!--<li>-->
+                            <!--<div class="media wow fadeInDown"><a href="#" class="media-left"><img alt=""-->
+                                                                                                  <!--src="assets/images/112x112.jpg">-->
+                            <!--</a>-->
+                                <!--<div class="media-body">-->
+                                    <!--<h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a>-->
+                                    <!--</h4>-->
+                                    <!--<p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas-->
+                                        <!--imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>-->
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</li>-->
+                        <!--<li>-->
+                            <!--<div class="media wow fadeInDown"><a href="#" class="media-left"><img alt=""-->
+                                                                                                  <!--src="assets/images/112x112.jpg">-->
+                            <!--</a>-->
+                                <!--<div class="media-body">-->
+                                    <!--<h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a>-->
+                                    <!--</h4>-->
+                                    <!--<p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas-->
+                                        <!--imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>-->
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</li>-->
+                    <!--</ul>-->
+                <!--</div>-->
                 <div class="single_bottom_rightbar">
                     <ul role="tablist" class="nav nav-tabs custom-tabs">
                         <li class="active" role="presentation"><a data-toggle="tab" role="tab" aria-controls="home"
