--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,18 +4,18 @@
         <div class="header_top">
           <div class="header_top_left">
             <ul class="top_nav">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="pages/page.html">About</a></li>
-              <li><a href="pages/contact.html">Contact</a></li>
-              <li><a href="pages/404.html">Error Page</a></li>
+              <li><a routerLink="">Home</a></li>
+              <li><a routerLink="page/about">About</a></li>
+              <li><a routerLink="page/contact">Contact</a></li>
+              <!--<li><a href="pages/404.html">Error Page</a></li>-->
             </ul>
           </div>
-          <div class="header_top_right">
-            <form action="#" class="search_form">
-              <input type="text" placeholder="Text to Search">
-              <input type="submit" value="">
-            </form>
-          </div>
+          <!--<div class="header_top_right">-->
+            <!--<form action="#" class="search_form">-->
+              <!--<input type="text" placeholder="Text to Search">-->
+              <!--<input type="submit" value="">-->
+            <!--</form>-->
+          <!--</div>-->
         </div>
         <!--<div class="header_bottom">-->
         <!--<div class="header_bottom_left"><a class="logo" href="index.html">mag<strong>Express</strong> <span>A Pro Magazine Template</span></a></div>-->
@@ -32,18 +32,23 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav custom_nav">
-            <li class=""><a href="index.html">Home</a></li>
-            <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Archives</a>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="pages/archive-main.html">Archive</a></li>
-                <li><a href="pages/archive1.html">Archive 1</a></li>
-                <li><a href="pages/archive2.html">Archive 2</a></li>
-                <li><a href="pages/archive3.html">Archive 3</a></li>
-              </ul>
-            </li>
-            <li><a href="pages/single.html">Single page</a></li>
-            <li><a href="pages/contact.html">Contact</a></li>
-            <li><a href="pages/404.html">404 page</a></li>
+            <li class=""><a routerLink=""><i class="fa fa-home" aria-hidden="true"></i>&nbsp; Home</a></li>
+            <!--<li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Archives</a>-->
+              <!--<ul class="dropdown-menu" role="menu">-->
+                <!--<li><a href="pages/archive-main.html">Archive</a></li>-->
+                <!--<li><a href="pages/archive1.html">Archive 1</a></li>-->
+                <!--<li><a href="pages/archive2.html">Archive 2</a></li>-->
+                <!--<li><a href="pages/archive3.html">Archive 3</a></li>-->
+              <!--</ul>-->
+            <!--</li>-->
+            <li><a routerLink="page/contact"><i class="fa fa-book" aria-hidden="true"></i>&nbsp; Contact us</a></li>
+            <!--<li><a href="pages/404.html">404 page</a></li>-->
+            <div class="header_top_right">
+              <form action="#" class="search_form">
+                <input type="text" placeholder="Text to Search">
+                <input type="submit" value="">
+              </form>
+            </div>
           </ul>
         </div>
       </div>
