add single page views count.

--- a/src/app/posts/post-list/post-list.component.css
+++ b/src/app/posts/post-list/post-list.component.css
@@ -4,6 +4,7 @@ carousel .item img{
 .single{
     height: 426px;
     cursor: pointer;
+    margin:auto;
 }
 carousel .carousel-control.right{
     top: 38px !important;
