--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -241,17 +241,19 @@
                     <!--</div>-->
                     <div class="single_bottom_rightbar">
                         <ul role="tablist" class="nav nav-tabs custom-tabs">
-                            <li class="active" role="presentation"><a data-toggle="tab" role="tab" aria-controls="home"
-                                                                      href="#mostPopular">Most Popular</a></li>
-                            <li role="presentation"><a data-toggle="tab" role="tab" aria-controls="messages"
-                                                       href="#recentComent">Recent Comment</a></li>
+                            <li class="active" role="presentation">
+                                <a data-toggle="tab" role="tab" aria-controls="home" href="#recommended">Recommended</a>
+                            </li>
+                            <li role="presentation">
+                                <a data-toggle="tab" role="tab" aria-controls="messages" href="#recentComent">Recent Comment</a>
+                            </li>
                         </ul>
                         <div class="tab-content">
                             <div id="mostPopular" class="tab-pane fade in active" role="tabpanel">
                                 <ul class="small_catg popular_catg wow fadeInDown">
                                     <li>
                                         <div class="media wow fadeInDown"><a class="media-left" href="#"><img
-                                                src="assets/images/112x112.jpg" alt=""></a>
+                                                src="assets/images/NoImage.jpg" alt=""></a>
                                             <div class="media-body">
                                                 <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium
                                                     lobortis </a></h4>
@@ -263,7 +265,7 @@
                                     </li>
                                     <li>
                                         <div class="media wow fadeInDown"><a class="media-left" href="#"><img
-                                                src="assets/images/112x112.jpg" alt=""></a>
+                                                src="assets/images/NoImage.jpg" alt=""></a>
                                             <div class="media-body">
                                                 <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium
                                                     lobortis </a></h4>
@@ -275,7 +277,7 @@
                                     </li>
                                     <li>
                                         <div class="media wow fadeInDown"><a class="media-left" href="#"><img
-                                                src="assets/images/112x112.jpg" alt=""></a>
+                                                src="assets/images/NoImage.jpg" alt=""></a>
                                             <div class="media-body">
                                                 <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium
                                                     lobortis </a></h4>
@@ -291,7 +293,7 @@
                                 <ul class="small_catg popular_catg">
                                     <li>
                                         <div class="media wow fadeInDown"><a class="media-left" href="#"><img
-                                                src="assets/images/112x112.jpg" alt=""></a>
+                                                src="assets/images/NoImage.jpg" alt=""></a>
                                             <div class="media-body">
                                                 <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium
                                                     lobortis </a></h4>
@@ -303,7 +305,7 @@
                                     </li>
                                     <li>
                                         <div class="media wow fadeInDown"><a class="media-left" href="#"><img
-                                                src="assets/images/112x112.jpg" alt=""></a>
+                                                src="assets/images/NoImage.jpg" alt=""></a>
                                             <div class="media-body">
                                                 <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium
                                                     lobortis </a></h4>
@@ -315,7 +317,7 @@
                                     </li>
                                     <li>
                                         <div class="media wow fadeInDown"><a class="media-left" href="#"><img
-                                                src="assets/images/112x112.jpg" alt=""></a>
+                                                src="assets/images/NoImage.jpg" alt=""></a>
                                             <div class="media-body">
                                                 <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium
                                                     lobortis </a></h4>
