--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
                 <div class="header_top">
                     <div class="header_top_left">
                         <ul class="top_nav">
-                            <li><a routerLink="">Home</a></li>
+                            <li><a routerLink="/">Home</a></li>
                             <li><a routerLink="page/about">About</a></li>
                             <li><a routerLink="page/contact">Contact</a></li>
                             <!--<li><a href="pages/404.html">Error Page</a></li>-->
