--- a/src/app/posts/post-single/post-single.component.html
+++ b/src/app/posts/post-single/post-single.component.html
@@ -19,7 +19,7 @@
                                     class="fa fa-clock-o"></i>{{date_gmt}}</span> <a href="#"><i
                                     class="fa fa-tags"></i>Technology</a>
                             </div>
-                            <img class="img-center" [src]="post.thumbnail" alt="{{post.name}}">
+                            <img class="img-center fancybox" [src]="post.thumbnail" alt="{{post.name}}">
                             <div [innerHTML]="post.content.rendered"></div>
                             <!--<ul>-->
                             <!--<li>Nunc sed aliquet nisi. Nullam ut magna</li>-->
@@ -117,8 +117,21 @@
                         <h2>Recent Post</h2>
                         <ul class="small_catg popular_catg wow fadeInDown">
                             <li>
-                                <div class="media wow fadeInDown"><a href="#" class="media-left"><img alt=""
-                                                                                                      src="../images/112x112.jpg">
+                                <div class="media wow fadeInDown"><a href="#" class="media-left">
+                                    <img alt="" src="{{DEPLOY_PATH}}assets/images/NoImage.jpg">
+                                </a>
+                                    <div class="media-body">
+                                        <h4 class="media-heading">
+                                            <a href="#">Duis condimentum nunc pretium lobortis </a>
+                                        </h4>
+                                        <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas
+                                            imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="media wow fadeInDown"><a href="#" class="media-left">
+                                    <img alt="" src="{{DEPLOY_PATH}}assets/images/NoImage.jpg">
                                 </a>
                                     <div class="media-body">
                                         <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium
@@ -130,21 +143,8 @@
                                 </div>
                             </li>
                             <li>
-                                <div class="media wow fadeInDown"><a href="#" class="media-left"><img alt=""
-                                                                                                      src="../images/112x112.jpg">
-                                </a>
-                                    <div class="media-body">
-                                        <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium
-                                            lobortis </a>
-                                        </h4>
-                                        <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas
-                                            imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="media wow fadeInDown"><a href="#" class="media-left"><img alt=""
-                                                                                                      src="../images/112x112.jpg">
+                                <div class="media wow fadeInDown"><a href="#" class="media-left">
+                                    <img alt="" src="{{DEPLOY_PATH}}assets/images/NoImage.jpg">
                                 </a>
                                     <div class="media-body">
                                         <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium
@@ -159,17 +159,21 @@
                     </div>
                     <div class="single_bottom_rightbar">
                         <ul role="tablist" class="nav nav-tabs custom-tabs">
-                            <li class="active" role="presentation"><a data-toggle="tab" role="tab" aria-controls="home"
-                                                                      href="#mostPopular">Most Popular</a></li>
-                            <li role="presentation"><a data-toggle="tab" role="tab" aria-controls="messages"
-                                                       href="#recentComent">Recent Comment</a></li>
+                            <li class="active" role="presentation">
+                                <a data-toggle="tab" role="tab" aria-controls="home" href="#mostPopular">Most Popular</a>
+                            </li>
+                            <li role="presentation">
+                                <a data-toggle="tab" role="tab" aria-controls="messages" href="#recentComent">Recent Comment</a>
+                            </li>
                         </ul>
                         <div class="tab-content">
                             <div id="mostPopular" class="tab-pane fade in active" role="tabpanel">
                                 <ul class="small_catg popular_catg wow fadeInDown">
                                     <li>
-                                        <div class="media wow fadeInDown"><a class="media-left" href="#"><img
-                                                src="../images/112x112.jpg" alt=""></a>
+                                        <div class="media wow fadeInDown">
+                                            <a class="media-left" href="#">
+                                            <img src="{{DEPLOY_PATH}}assets/images/NoImage.jpg" alt="">
+                                        </a>
                                             <div class="media-body">
                                                 <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium
                                                     lobortis </a></h4>
@@ -180,8 +184,9 @@
                                         </div>
                                     </li>
                                     <li>
-                                        <div class="media wow fadeInDown"><a class="media-left" href="#"><img
-                                                src="../images/112x112.jpg" alt=""></a>
+                                        <div class="media wow fadeInDown">
+                                            <a class="media-left" href="#">
+                                                <img src="{{DEPLOY_PATH}}assets/images/NoImage.jpg" alt=""></a>
                                             <div class="media-body">
                                                 <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium
                                                     lobortis </a></h4>
@@ -192,8 +197,9 @@
                                         </div>
                                     </li>
                                     <li>
-                                        <div class="media wow fadeInDown"><a class="media-left" href="#"><img
-                                                src="../images/112x112.jpg" alt=""></a>
+                                        <div class="media wow fadeInDown">
+                                            <a class="media-left" href="#">
+                                                <img src="{{DEPLOY_PATH}}assets/images/NoImage.jpg" alt=""></a>
                                             <div class="media-body">
                                                 <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium
                                                     lobortis </a></h4>
@@ -208,8 +214,22 @@
                             <div id="recentComent" class="tab-pane fade" role="tabpanel">
                                 <ul class="small_catg popular_catg">
                                     <li>
-                                        <div class="media wow fadeInDown"><a class="media-left" href="#"><img
-                                                src="../images/112x112.jpg" alt=""></a>
+                                        <div class="media wow fadeInDown">
+                                            <a class="media-left" href="#">
+                                                <img src="{{DEPLOY_PATH}}assets/images/NoImage.jpg" alt=""></a>
+                                            <div class="media-body">
+                                                <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium
+                                                    lobortis </a></h4>
+                                                <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus,
+                                                    egestas imperdiet nulla nisl quis mauris. Suspendisse a
+                                                    pharetra </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="media wow fadeInDown">
+                                            <a class="media-left" href="#">
+                                                <img src="{{DEPLOY_PATH}}assets/images/NoImage.jpg" alt=""></a>
                                             <div class="media-body">
                                                 <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium
                                                     lobortis </a></h4>
@@ -221,19 +241,7 @@
                                     </li>
                                     <li>
                                         <div class="media wow fadeInDown"><a class="media-left" href="#"><img
-                                                src="../images/112x112.jpg" alt=""></a>
-                                            <div class="media-body">
-                                                <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium
-                                                    lobortis </a></h4>
-                                                <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus,
-                                                    egestas imperdiet nulla nisl quis mauris. Suspendisse a
-                                                    pharetra </p>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="media wow fadeInDown"><a class="media-left" href="#"><img
-                                                src="../images/112x112.jpg" alt=""></a>
+                                                src="{{DEPLOY_PATH}}assets/images/NoImage.jpg" alt=""></a>
                                             <div class="media-body">
                                                 <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium
                                                     lobortis </a></h4>
